// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField renders a TextField 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <div
    className="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid={false}
      className="MuiInput-input-13"
      disabled={false}
      name="myText"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
      value="Foo"
    />
  </div>
</div>
`;

exports[`TextField renders a TextField with an error 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <div
    className="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid={false}
      className="MuiInput-input-13"
      disabled={false}
      name="myText"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
      value="Foo"
    />
  </div>
  <p
    className="MuiFormHelperText-root-18 MuiFormHelperText-filled-23"
  >
    FooError
  </p>
</div>
`;

exports[`TextField renders a TextField with an warning 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <div
    className="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid={false}
      className="MuiInput-input-13"
      disabled={false}
      name="myText"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
      value="Foo"
    />
  </div>
  <p
    className="MuiFormHelperText-root-18 MuiFormHelperText-filled-23"
  >
    FooWarning
  </p>
</div>
`;

exports[`TextField renders a TextField with no error when not touched 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <div
    className="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid={false}
      className="MuiInput-input-13"
      disabled={false}
      name="myText"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
      value="Foo"
    />
  </div>
</div>
`;

exports[`TextField renders a TextField with no warning when not touched 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <div
    className="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid={false}
      className="MuiInput-input-13"
      disabled={false}
      name="myText"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
      value="Foo"
    />
  </div>
</div>
`;

exports[`TextField should ignore defaultValue 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <div
    className="MuiInput-root-5 MuiInput-formControl-6 MuiInput-underline-9"
  >
    <input
      aria-invalid={false}
      className="MuiInput-input-13"
      disabled={false}
      name="myText"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
      value="Foo"
    />
  </div>
  <p
    className="MuiFormHelperText-root-18 MuiFormHelperText-filled-23"
  >
    FooWarning
  </p>
</div>
`;
